--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,9 +48,10 @@ h1, h2, h3 {
 .navbar-default .navbar-toggle {
   border: 2px solid white;
   &:hover, &:focus {
-    background-color: #00c6ff;
+    background-color: white;
   }
 }
+
 // Home Page Styles
 .home-callout {
   color: white;
