--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -14,6 +14,7 @@
       <div class="form-group">
         <%= f.label :club_name %>
         <%= f.text_field :club_name, class: 'form-control' %>
+      </div>
       <div class="form-group">
         <%= f.label :phone_number %>
         <%= f.text_field :phone_number, class: 'form-control' %>
