--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,8 +16,13 @@
                             <div>
                                 <%= link_to user do%>
                                     <h2><%= user.profile.first_name %> <%= user.profile.last_name %></h2>
-                                    <p><%= user.profile.club_name %></p>
                                 <% end %>
+                                <p>
+                                    <%= user.profile.club_name %>
+                                    <% if user.plan_id == 2 %>
+                                        <span class = "label label-danger">PRO</span>
+                                    <% end %>
+                                </p>
                             </div>
                         </div>
                     </li>
